# tonic-prost-playground

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
greeter/: build.rs
greeter/proto/: tasks.proto
greeter/src/: client.rs  server.rs
src/: client.rs
